# jancy_b

./: .appveyor.yml  .gitmodules  .travis.yml  CMakeLists.txt  README.rst  dependencies.cmake
.github/workflows/: ci.yml
package/unix/tar/: build-tar.sh.in
package/windows/zip/: build-zip.bat.in
